--- a/facedetectorapp/package.json
+++ b/facedetectorapp/package.json
@@ -7,6 +7,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-dropdown": "^1.4.2",
+    "react-helmet": "^5.2.0",
     "react-particles-js": "^2.1.2",
     "react-scripts": "1.1.4",
     "react-tilt": "^0.1.4",
